syntax = "proto3";

package agent;

message AssetDescriptor {
  string asset_id = 1;
  string site_id = 2;
  string asset_name = 3;
  string site_name = 4;
  string location = 5;
}

message Register {
  string asset_id = 1;
  string site_id = 2;
  string asset_name = 3;
  string site_name = 4;
  string gateway_id = 5;
  repeated AssetDescriptor assets = 6;
}

message Telemetry {
  string asset_id = 1;
  string site_id = 2;
  string site_name = 3;
  string timestamp = 4;
  double soc_mwhr = 5;
  double soc_pct = 6;
  double capacity_mwhr = 7;
  double current_mw = 8;
  double setpoint_mw = 9;
  double max_mw = 10;
  double min_mw = 11;
  string status = 12;
}

message Heartbeat {
  string asset_id = 1;
  string timestamp = 2;
}

message Setpoint {
  string asset_id = 1;
  double mw = 2;
  optional uint64 duration_s = 3;
  optional string site_id = 4;
  optional string group_id = 5;
  optional string dispatch_id = 6;
}

message DispatchAck {
  string dispatch_id = 1;
  string asset_id = 2;
  string status = 3;
  string timestamp = 4;
  string reason = 5;
}

message Event {
  string id = 1;
  string asset_id = 2;
  string site_id = 3;
  string timestamp = 4;
  string event_type = 5;
  string severity = 6;
  string message = 7;
}

message BootstrapRequest {
  repeated string asset_ids = 1;
}

message AssetBootstrap {
  string asset_id = 1;
  optional Telemetry telemetry = 2;
  optional Setpoint setpoint = 3;
}

message BootstrapResponse {
  repeated AssetBootstrap assets = 1;
}

message AgentToHeadend {
  oneof msg {
    Register register = 1;
    Telemetry telemetry = 2;
    Heartbeat heartbeat = 3;
    DispatchAck dispatch_ack = 4;
    Event event = 5;
  }
}

message HeadendToAgent {
  oneof msg {
    Setpoint setpoint = 1;
  }
}

service AgentLink {
  rpc Stream(stream AgentToHeadend) returns (stream HeadendToAgent);
  rpc Bootstrap(BootstrapRequest) returns (BootstrapResponse);
}
